Using NewtonSoft Json instead

--- a/RazorReact.AspNetSample/Views/Shared/_Layout.cshtml
+++ b/RazorReact.AspNetSample/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
         </footer>
     </div>
-    @Html.RazorReact("StartPage", new { message = DateTime.Now.ToString() }, new RazorReactOptions() { ClientSide = true })
+    @Html.RazorReact("StartPage", new { message = DateTime.Now.ToString() }, new RazorReactOptions() { ServerSide = true })
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
