--- a/RazorReact.AspNetSample/Views/Shared/_Layout.cshtml
+++ b/RazorReact.AspNetSample/Views/Shared/_Layout.cshtml
@@ -9,8 +9,6 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    <h1>Hi!</h1>
-
     @*@Html.RazorReact("StartPage")*@
 
     <div class="container body-content">
@@ -20,7 +18,7 @@
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
         </footer>
     </div>
-    @Html.RazorReact("StartPage", new { message = DateTime.Now.ToString() }, new RazorReactOptions() { ServerSide = true })
+    @Html.RazorReact("StartPage", new { heroText = "<h1>Hero text!</h1>" })
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
