--- a/RazorReact.AspNetSample/Views/Shared/_Layout.cshtml
+++ b/RazorReact.AspNetSample/Views/Shared/_Layout.cshtml
@@ -1,5 +1,4 @@
-﻿@using RazorReact.Core
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -18,12 +17,6 @@
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
         </footer>
     </div>
-    @Html.RazorReact("ProductHeroWithSampleProps", new { heroText = "<h1>Hero text!</h1>" }, null, null, new RazorReactOptions()
-    {
-        LiveReloadDevMode = true,
-        ClientSide = true
-    })
-
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
